definiendo pantallas auth

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "paths": {
       "components/*": ["./components/*"],
       "utils/*": ["./utils/*"],
-      "constants/*": ["./constants/*"]
+      "constants/*": ["./constants/*"],
+      "screen/*": ["./screen/*"]
     }
   }
 }
