screen con registro de google y habilitando tailwind

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
       "components/*": ["./components/*"],
       "utils/*": ["./utils/*"],
       "constants/*": ["./constants/*"],
-      "screen/*": ["./screen/*"]
+      "screen/*": ["./screen/*"],
+      "public/*": ["./public/*"]
     }
   }
 }
