--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "qr-scanner": "^1.4.2",
     "react": "^18",
     "react-dom": "^18"
   },
