--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.7",
     "qr-scanner": "^1.4.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
