--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "bip32": "^4.0.0",
@@ -19,8 +20,7 @@
     "qr-scanner": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-qr-code": "^2.0.15",
-    "tiny-secp256k1": "^2.2.3"
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
