--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
-    "ethers": "^6.13.2",
+    "ethers": "^5.5.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "qr-scanner": "^1.4.2",
